fix error menu on mobile

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,7 +6,10 @@
     width: 100%;
     z-index: 10;
     background-color: rgba(0, 0, 0, 0.801218);
-    
+    @media (max-width: 600px) {
+        padding-left: 100px;
+        
+    }
     .title-link {
         .header-logo {
             padding: 12px 85px;
